--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<nav>
+  <a [routerLink]="['/component-one']">Component One</a>
+  &nbsp;
+  <a [routerLink]="['/component-two', 123]">Component Two (id: 123)</a>
+</nav>
+
+<div style="margin-top: 1rem;">
+  <button (click)="onClick()">Go to Component Two (param: 456)</button>
+</div>
+
+<div style="color: green; margin-top: 1rem;">Outlet:</div>
+<div style="border: 2px solid green; padding: 1rem;">
+  <router-outlet></router-outlet>
+</div>
