Fix a typo in the branch name.  Add some space between the route links.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
   <a [routerLink]="['/component-one']">Component One</a>
+  &nbsp;
   <a [routerLink]="['/component-two', 123]">Component Two (id: 123)</a>
 </nav>
 <div style="color: green; margin-top: 1rem;">Outlet:</div>
