New Route Params & Child Routes Example.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<header>
+  <a routerLink="/product-list">
+    <h1>Route Params & Child Routes Example</h1>
+  </a>
+</header>
+<div>
+  <router-outlet></router-outlet>
+</div>
+
